18287
{noformat}
scala> class A { val x: this.type with Singleton = this ; val y: this.type = x }
<console>:7: error: type mismatch;
 found   : A.this.type with Singleton
 required: A.this.type
       class A { val x: this.type with Singleton = this ; val y: this.type = x }
                                                                             ^
{noformat}

Why would one write a type like this.type with Singleton, you might ask? I'll save that story for a separate ticket.
